# fableforge

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.adoc  SECURITY.md  TEST_RESULTS.md  index.html  publish.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  integration_issue.yml  model_training.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agent-constitution/: README.md  pyproject.toml
agent-constitution/src/agent_constitution/: __init__.py  cli.py  extractor.py  guardrails.py  rules.py
agent-curriculum/: README.md  pyproject.toml
agent-curriculum/src/agent_curriculum/: __init__.py  cli.py  difficulty_scorer.py  scheduler.py  stage_builder.py  trainer.py
agent-curriculum/src/agent_curriculum/configs/: stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml  stage5.yaml
agent-dev/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
agent-fuzzer/: README.md  pyproject.toml
agent-fuzzer/src/agent_fuzzer/: __init__.py  cli.py  generator.py  reporter.py  runner.py
agent-profiler/: README.md  pyproject.toml
agent-profiler/src/agent_profiler/: __init__.py  classifier.py  cli.py  profiler.py  visualizer.py
agent-runtime/: README.md  pyproject.toml
agent-runtime/docker/: Dockerfile
agent-runtime/src/agent_runtime/: __init__.py  cli.py  daemon.py  memory_store.py  models.py  server.py  session_manager.py  state_serializer.py
agent-runtime/tests/: test_state_serializer.py
agent-skills/: README.md  pyproject.toml
agent-skills/src/agent_skills/: __init__.py  cli.py  decomposition.py  lora_builder.py  registry.py
agent-skills/src/agent_skills/skills/: bash.yaml  debug.yaml  edit.yaml  plan.yaml  recover.yaml  verify.yaml
agent-swarm/: README.md  pyproject.toml
agent-swarm/src/agent_swarm/: __init__.py  agents.py  cli.py  models.py  orchestrator.py  transition_matrix.py
agent-swarm/tests/: test_orchestrator.py
agent-telemetry/: README.md  pyproject.toml
agent-telemetry/src/agent_telemetry/: __init__.py  cli.py  collector.py  dashboard.py  error_tracker.py  models.py  storage.py  token_tracker.py
agent-telemetry/tests/: test_token_tracker.py
anvil/: CHANGELOG.md  Dockerfile
anvil/.anvil/snapshots/snap-1781461959/: .manifest.json  README.md  pyproject.toml
anvil/.anvil/snapshots/snap-1781461959/src/anvil/: __init__.py  cli.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/agents/: agent_base.py  agent_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/commands/: __init__.py  command_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/config_v2/: config_v2.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/core/: __init__.py  compaction.py  config.py  config_v2.py  snapshot.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/integrations/: __init__.py  cost_optimizer.py  error_recovery.py  verifyloop.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/mcp/: __init__.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/models/: anthropic_model.py  openai_model.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/permissions/: __init__.py  permissions.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/rules/: rules_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/snapshot/: __init__.py  snapshot_manager.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/tools/: executor.py  new_tools.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/tui/: __init__.py
anvil/.anvil/snapshots/snap-1781461959/src/anvil/verify/: pipeline.py
anvil/.anvil/snapshots/snap-1781461959/tests/: test_agents.py  test_anvil.py  test_models.py  test_permissions.py  test_tools.py
bench-agent/: README.md  pyproject.toml
bench-agent/src/bench_agent/: __init__.py  cli.py  evaluator.py  leaderboard.py  models.py  runner.py  scorer.py  tasks.py
bench-agent/tests/: test_scorer.py  test_tasks.py
blog/: 01_announcing_fableforge.md  02_self_verified_coding.md
cli/: pyproject.toml
cost-optimizer/: README.md  pyproject.toml
cost-optimizer/src/cost_optimizer/: __init__.py  analyzer.py  cli.py  optimizer.py  pricing.py  router.py
docs/: anvil-vs-opencode.md  getting-started.md  training-guide.md
error-recovery/: README.md  pyproject.toml
error-recovery/src/error_recovery/: __init__.py  cli.py  error_classifier.py  middleware.py  models.py  pattern_matcher.py  recovery_engine.py
error-recovery/src/error_recovery/patterns/: bash_errors.json  edit_errors.json  general.json  test_errors.json
error-recovery/tests/: test_error_classifier.py  test_middleware.py
fable5-dataset/: DATASET_CARD.md  README.md  pyproject.toml
fable5-dataset/src/fable5_dataset/: __init__.py  benchmark.py  cli.py  loader.py  preprocessor.py  stats.py
integration_tests/: test_cross_project.py  test_ecosystem.py
notebooks/: 01_quickstart.ipynb  02_custom_model.ipynb  03_training_pipeline.ipynb  04_ecosystem_integration.ipynb  data_prep_colab.ipynb  train_fableforge_14b_colab.ipynb  train_reason_critic_colab.ipynb  train_shell_whisperer_colab.ipynb
scripts/: demo_ecosystem.sh  demo_video_script.md  download_and_prepare_data.sh  download_data.sh  init_repos.sh  sync_versions.py  train_all.sh  train_all_free.sh
shell-whisperer/: README.md  pyproject.toml
shell-whisperer/scripts/: export_onnx.py  train.sh  train_colab.ipynb
shell-whisperer/src/shell_whisperer/: __init__.py  cli.py  data_extractor.py  exporter.py  inference.py  prompts.py  server.py  trainer.py
shell-whisperer/tests/: test_data_extractor.py  test_inference.py
trace-viz/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
verifyloop/: README.md  pyproject.toml
verifyloop/examples/: basic_usage.py  coding_agent.py  debug_agent.py
verifyloop/src/verifyloop/: __init__.py  cli.py  executor.py  memory.py  models.py  pipeline.py  planner.py  recoverer.py  verifier.py
verifyloop/tests/: test_pipeline.py  test_verifier.py
website/: 404.html  index.html
(+81 files in other folders)
