[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-curriculum"
version = "0.1.0"
description = "Curriculum learning for agent training — difficulty-scored stages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "pyyaml>=6.0", "numpy>=1.24", "click>=8.0", "rich>=13.0"]

[project.scripts]
acurriculum = "agent_curriculum.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_curriculum"]