[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skills"
version = "0.1.0"
description = "Skill registry, decomposition, and LoRA building for coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "torch>=2.1",
    "peft>=0.7",
]

[project.scripts]
askill = "agent_skills.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_skills"]