[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-telemetry"
version = "0.1.0"
description = "Datadog for AI agents — real-time observability, token tracking, cost estimation, error rates"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "clickhouse-driver>=0.2.6",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "plotly>=5.18.0",
    "click>=8.1.0",
    "tiktoken>=0.6.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
agenttelemetry = "agent_telemetry.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
