[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "error-recovery"
version = "0.1.0"
description = "Self-healing agent middleware that intercepts errors and injects recovery prompts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "FableForge" }]
keywords = ["agent", "error-recovery", "self-healing", "middleware", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
error-recovery = "error_recovery.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
