[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifyloop"
version = "0.1.0"
description = "Agent framework implementing Plan → Execute → Verify → Recover with trained verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "FableForge", email = "dev@fableforge.ai" },
]
keywords = ["agent", "llm", "verification", "autonomous", "loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.5",
    "aiofiles>=23.0",
    "rich>=13.0",
    "tree-sitter>=0.21",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
vl = "verifyloop.cli:cli"

[project.urls]
Homepage = "https://github.com/KingLabsA/verifyloop"
Repository = "https://github.com/KingLabsA/verifyloop"

[tool.hatch.build.targets.wheel]
packages = ["src/verifyloop"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]