[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-agent"
version = "0.1.0"
description = "The open-source, self-verified coding agent. Generate → Execute → Verify → Recover."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "FableForge", email = "team@fableforge.ai"}]
keywords = ["agent", "coding", "verification", "self-healing", "llm", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.25",
    "tiktoken>=0.5",
    "pathspec>=0.11",
    "tree-sitter>=0.20",
    "prompt-toolkit>=3.0",
    "jsonschema>=4.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.2", "onnxruntime>=1.16"]
api = ["openai>=1.0", "anthropic>=0.18"]
tui = ["textual>=0.47", "textual-dev>=0.4"]
all = ["anvil-agent[local,api,tui]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
anvil = "anvil.cli:main"

[project.entry-points."anvil.models"]
local = "anvil.models.local:LocalModel"
openai = "anvil.models.openai_model:OpenAIModel"
anthropic = "anvil.models.anthropic_model:AnthropicModel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
